directory discovery and hash the file path